# treewiz

./: .gitignore  CLAUDE.md  pyproject.toml  treewiz-plan.md
src/treewiz/: __init__.py  __main__.py
src/treewiz/model/: actions.py  config.py  differ.py  inventory.py
src/treewiz/tui/: app.py  diff_panel.py  file_browser.py  ignore_modal.py  theme.py
