[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "treewiz"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.40",
]

[project.scripts]
treewiz = "treewiz.__main__:main"

[project.optional-dependencies]
dev = ["pytest"]
